@@ -11,6 +11,11 @@ Changed
     When creating a usedBy link fetch image details and show user freindly name
     instead of fingerprint (#186)
 
+    Use apiToken to authenticate user on API requests as part of the journey
+    to a "statless api" (so client apps can exist) the current caveat is that
+    the project will default to "default" for every request, until we move the
+    data into the database (#180)
+
 Fixed
     Terminal sessions not opening properly
     Some instance settings can't be properly set (close #192)
